--- a/ANGULAR/html/Navbar.html
+++ b/ANGULAR/html/Navbar.html
@@ -139,12 +139,12 @@
     </div>
     <nav>
         <ul>
-            <li><a href="/html/Home.html" class="nav-link">Home</a></li>
-            <li><a href="/html/Recipes.html" class="nav-link">Recipes</a></li>
-            <li><a href="/html/Events.html" class="nav-link">Events</a></li>
-            <li><a href="/html/Blog.html" class="nav-link">Blog</a></li>
-            <li><a href="/html/Login.html" class="nav-link subscribe">Login</a></li>
-            <li><a href="/html/Register.html" class="nav-link subscribe">Subscribe</a></li>
+            <li><a href="/ANGULAR/html/Home.html" class="nav-link">Home</a></li>
+            <li><a href="/ANGULAR/html/Recipes.html" class="nav-link">Recipes</a></li>
+            <li><a href="/ANGULAR/html/Events.html" class="nav-link">Events</a></li>
+            <li><a href="/ANGULAR/html/Blog.html" class="nav-link">Blog</a></li>
+            <li><a href="/ANGULAR/html/Login.html" class="nav-link subscribe">Login</a></li>
+            <li><a href="/ANGULAR/html/Register.html" class="nav-link subscribe">Subscribe</a></li>
         </ul>
         <div id="hamburger">
             <span class="bar"></span>
