--- a/ANGULAR/html/Events.html
+++ b/ANGULAR/html/Events.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
     <link rel="stylesheet" href="../css/Events.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="../js/angular.min.js"></script>
     <script src="../js/angular-route.min.js"></script>
@@ -84,23 +85,31 @@
           <p>We offer a holistic program that allows you to live incredible experiences and builds you up for a better life, merging the benefits of yoga for a deep transformation of body, mind, and soul.</p>
       </div>
 
-        <input type="text" id="search" onkeyup="searchEvents()" placeholder="Search Events">
-        <div class="appear3" id="event-cards">
-            <div ng-repeat="data in datas" class="event-card">
+        <input type="text" id="search" ng-model="searchQuery" ng-keyup="fetchData()" placeholder="Search Events">
+        <div class="appear3 d-flex justify-content-center" id="event-cards">
+            <div ng-repeat="item in items" class="event-card">
                 <img src="../images/chermiti-mohamed-fk5RgUiYpVw-unsplash.jpg" alt="Tunis Image">
                 <div class="event-date">
-                    <img src="../images/icons8-clock.svg" alt="Clock Icon"> {{ data.attributes.date | date:'MMM d, yyyy'  }}
+                    <img src="../images/icons8-clock.svg" alt="Clock Icon"> {{ item.attributes.date | date:'MMM d, yyyy'  }}
                 </div>
                 <div class="event-info">
-                    <div class="event-category">{{ data.attributes.category  }}</div>
-                    <div class="event-title">{{ data.attributes.title  }}</div>
-                    <div class="event-description">{{ data.attributes.sub_message  }}</div>
-                    <a href="Events_1.html#" class="btn" ng-click="getEventId(data.id)">
+                    <div class="event-category">{{ item.attributes.category  }}</div>
+                    <div class="event-title">{{ item.attributes.title  }}</div>
+                    <div class="event-description">{{ item.attributes.sub_message  }}</div>
+                    <a href="Events_1.html#" class="btn" ng-click="getEventId(item.id)">
                         Participate
                     </a>
                 </div>
             </div>
         </div>
+        <nav aria-label="Page navigation example" class="d-flex justify-content-center mt-3">
+            <ul class="pagination">
+                <li class="page-item" ng-click="fetchData(1)" ng-if="currentPage > 1"><a href="" class="page-link">First</a></li>
+                <li class="page-item" ng-click="fetchData(currentPage - 1)" ng-if="currentPage > 1"><a href="" class="page-link">Previous</a></li>
+                <li class="page-item" ng-click="fetchData(currentPage + 1)" ng-if="currentPage < totalPages"><a href="" class="page-link">Next</a></li>
+                <li class="page-item" ng-click="fetchData(totalPages)" ng-if="currentPage < totalPages"><a href="" class="page-link">Last</a></li>
+            </ul>
+        </nav>
   </div>
 
   <div id="footer"></div>
