--- a/ANGULAR/html/Dashboard/create-event.html
+++ b/ANGULAR/html/Dashboard/create-event.html
@@ -28,8 +28,8 @@
             <label class="form-label" for="category">Category</label>
             <select class="form-control" id="category" name="category" ng-model="formDataCreate.category">
                     <option selected disabled>Select</option>
-                    <option value="health">Health</option>
-                    <option value="travel">Travel</option>
+                    <option value="Health">Health</option>
+                    <option value="Travel">Travel</option>
                     <option value="Environment">Environment</option>
             </select><br>
 
