--- a/ANGULAR/html/Events.html
+++ b/ANGULAR/html/Events.html
@@ -37,7 +37,7 @@
         <!-- Slideshow -->
          <section id="slider" class="appear2">
           <!-- Card 1 -->
-          <div class="card active-slide">
+          <div class="card-course active-slide">
             <div class="course-info">
                 <h2>Reconnection</h2>
                 <div class="duration">
@@ -53,7 +53,7 @@
           </div>
 
           <!-- Card 2 -->
-          <div class="card">
+          <div class="card-course">
                 <div class="course-info">
                     <h2>Tadasana</h2>
                     <div class="duration">
@@ -79,18 +79,39 @@
     </div>
 
     <div id="container-three">
-      <div id="header-two" class="appear3">
-          <div class="highlight-text">TO COME</div>
-          <h1>It might be interesting for you</h1>
-          <p>We offer a holistic program that allows you to live incredible experiences and builds you up for a better life, merging the benefits of yoga for a deep transformation of body, mind, and soul.</p>
-      </div>
+        <div id="header-two" class="appear3">
+            <div class="highlight-text">TO COME</div>
+            <h1>It might be interesting for you</h1>
+            <p>We offer a holistic program that allows you to live incredible experiences and builds you up for a better life, merging the benefits of yoga for a deep transformation of body, mind, and soul.</p>
+        </div>
 
         <input type="text" id="search" ng-model="searchQuery" ng-keyup="fetchData()" placeholder="Search Events">
-        <label for="filterCategory" class="form-label">Filter by Category</label>
-        <select id="filterCategory" class="form-select mb-4" ng-model="selectedCategory" ng-change="fetchData()">
-            <option value="">All Categories</option>
-            <option ng-repeat="category in categories" value="{{ category }}">{{ category }}</option>
-        </select>
+
+        <div class="container mb-2">
+        <div class="row align-items-center">
+            <div class="col-md-4 mb-2">
+                <label for="searchDate" class="form-label">Date</label>
+                <input id="searchDate" type="date" ng-model="date" class="form-control" ng-change="fetchData()">
+            </div>
+            <div class="col-md-4 mb-2">
+                <label for="filterCategory" class="form-label">Filter</label>
+                <select id="filterCategory" class="form-select" ng-model="selectedCategory" ng-change="fetchData()">
+                    <option value="">All Categories</option>
+                    <option ng-repeat="category in categories" value="{{ category }}">{{ category }}</option>
+                </select>
+            </div>
+            <div class="col-md-4 mb-2" style="max-height: 70px;">
+                <label for="sort" class="form-label">Sort</label>
+                <nav id="sort" aria-label="Page navigation">
+                    <ul class="pagination d-flex text-center">
+                        <li class="page-item flex-fill" ng-model="sort" ng-click="sort='asc'; fetchData(); toggleDisable('nearest')" ng-class="{'disabled': isNearestDisabled}"><a href="" class="page-link">Nearest</a></li>
+                        <li class="page-item flex-fill" ng-model="sort" ng-click="sort='desc'; fetchData(); toggleDisable('farthest')" ng-class="{'disabled': isFarthestDisabled}"><a href="" class="page-link">Farthest</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        </div>
+
         <div class="appear3 d-flex justify-content-center" id="event-cards">
             <div ng-repeat="item in items" class="event-card">
                 <img src="../images/chermiti-mohamed-fk5RgUiYpVw-unsplash.jpg" alt="Tunis Image">
@@ -101,7 +122,7 @@
                     <div class="event-category">{{ item.attributes.category  }}</div>
                     <div class="event-title">{{ item.attributes.title  }}</div>
                     <div class="event-description">{{ item.attributes.sub_message  }}</div>
-                    <a href="Events_1.html#" class="btn" ng-click="getEventId(item.id)">
+                    <a href="Events_1.html#" class="btn-participate" ng-click="getEventId(item.id)">
                         Participate
                     </a>
                 </div>
@@ -111,16 +132,19 @@
             <ul class="pagination">
                 <li class="page-item" ng-click="fetchData(1)" ng-if="currentPage > 1"><a href="" class="page-link">First</a></li>
                 <li class="page-item" ng-click="fetchData(currentPage - 1)" ng-if="currentPage > 1"><a href="" class="page-link">Previous</a></li>
+                <li class="page-item" ng-repeat="page in pages track by $index" ng-class="{active: page === currentPage}">
+                    <a href="" class="page-link" ng-click="fetchData(page)">{{ page }}</a>
+                </li>
                 <li class="page-item" ng-click="fetchData(currentPage + 1)" ng-if="currentPage < totalPages"><a href="" class="page-link">Next</a></li>
                 <li class="page-item" ng-click="fetchData(totalPages)" ng-if="currentPage < totalPages"><a href="" class="page-link">Last</a></li>
             </ul>
         </nav>
-  </div>
+    </div>
 
-  <div id="footer"></div>
+    <div id="footer"></div>
 
-      <script src="../js/Events.js"></script>
-      <script src="../js/Navbar.js?v=1" defer></script>
+    <script src="../js/Events.js"></script>
+    <script src="../js/Navbar.js?v=1" defer></script>
     
 </body>
 </html>
