--- a/ANGULAR/html/Dashboard/list-event.html
+++ b/ANGULAR/html/Dashboard/list-event.html
@@ -1,25 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="yogo">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>List Event</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <script src="../../js/angular.min.js"></script>
-    <script src="../../js/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-sanitize.min.js"></script>
-    <script src="../../js/Controller.js"></script>
-    <script src="../../js/App.js"></script>
-</head>
-<body>
-
-    <div id="navbar-dashboard"></div>
-
     <div class="container">
         <h1 class="text-center mt-5" style="margin-bottom: 0px;">All Event</h1>
         <div class="text-center mt-1 mb-3">
-            <a href="create-event.html">
+            <a href="#/create-event">
                 <button type="submit" class="btn btn-success">Create Event</button>
             </a>
         </div>
@@ -46,7 +28,7 @@
                     <td>{{ data.attributes.day }}</td>
                     <td>{{ data.attributes.date | date:'MMM d, yyyy' }}</td>
                     <td>
-                        <a href="update-event.html#"><button type="submit" class="btn btn-sm btn-primary text-light" ng-click="getEventId(data.id)">Edit</button></a>
+                        <a href="#/update-event"><button type="submit" class="btn btn-sm btn-primary text-light" ng-click="getEventId(data.id)">Edit</button></a>
                         <button type="submit" class="btn btn-sm btn-danger" ng-click="deleteEvent(data.id)">Delete</button>
                     </td>
                 </tr>          
@@ -56,7 +38,3 @@
         </form>
     </div>
     </div>
-
-    <script src="../../js/Navbar-Dashboard.js?v=1"></script>
-</body>
-</html>
