--- a/ANGULAR/html/Index.html
+++ b/ANGULAR/html/Index.html
@@ -13,11 +13,11 @@
 
     <div id="nav">
         <div id="logo">
-            <a href="/html/Home.html">
+            <a href="#/" class="nav-link" ng-class="{'active-nav': isActive('/')}">
                 <h1>Yogo</h1>
             </a>
         </div>
-        <nav id="navbar" ng-controller="EventsController">
+        <nav id="navbar" ng-controller="NavBarController">
             <ul>
                 <li><a href="#/" class="nav-link" ng-class="{'active-nav': isActive('/')}">Home</a></li>
                 <li><a href="/ANGULAR/html/Recipes.html" class="nav-link">Recipes</a></li>
@@ -35,7 +35,7 @@
     </div>
 
     <div ng-view>
-
+        
     </div>
 
     <footer>
@@ -52,6 +52,9 @@
     <script src="../js/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-sanitize.min.js"></script>
     <script src="../js/App.js"></script>
-    <script src="../js/Controller.js"></script>
+    <script src="../js/controllers/NavBarController.js"></script>
+    <script src="../js/controllers/HomeController.js"></script>
+    <script src="../js/controllers/EventsController.js"></script>
+    <script src="../js/services/EventsService.js"></script>
 </body>
 </html>
