--- a/ANGULAR/html/Index.html
+++ b/ANGULAR/html/Index.html
@@ -6,6 +6,7 @@
     <title>List Event</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
     <link rel="stylesheet" href="../css/Navbar.css">
     <link rel="stylesheet" href="../css/Footer.css">
 </head>
@@ -24,7 +25,7 @@
                 <li><a href="#/events" class="nav-link" ng-class="{'active-nav': isActive('/events')}">Events</a></li>
                 <li><a href="/ANGULAR/html/Blog.html" class="nav-link">Blog</a></li>
                 <li><a href="/ANGULAR/html/Login.html" class="nav-link subscribe">Login</a></li>
-                <li><a href="/ANGULAR/html/Register.html" class="nav-link subscribe">Subscribe</a></li>
+                <li><a href="#/register" class="nav-link subscribe">Subscribe</a></li>
             </ul>
             <div id="hamburger">
                 <span class="bar"></span>
@@ -38,7 +39,7 @@
         
     </div>
 
-    <footer>
+    <footer ng-show="showFooter">
         <h2>Yogo</h2>
         <nav>
             <a href="/html/Recipes.html">Recipes</a>
@@ -55,6 +56,11 @@
     <script src="../js/controllers/NavBarController.js"></script>
     <script src="../js/controllers/HomeController.js"></script>
     <script src="../js/controllers/EventsController.js"></script>
+    <script src="../js/controllers/RegisterController.js"></script>
+    <script src="../js/controllers/RegisterStep1Controller.js"></script>
+    <script src="../js/controllers/RegisterStep2Controller.js"></script>
+    <script src="../js/controllers/RegisterStep3Controller.js"></script>
     <script src="../js/services/EventsService.js"></script>
+    <script src="../js/services/MembersService.js"></script>
 </body>
 </html>
