--- a/ANGULAR/html/Register_Step_3.html
+++ b/ANGULAR/html/Register_Step_3.html
@@ -1,85 +1,66 @@
-<!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Method - Yoogy</title>
-    <link rel="stylesheet" href="../css/Register_Step_3.css">
-</head>
-
-<body>
-
-    <div id="navbar"></div>
-
-    <div class="wrap">
-        <div id="step-indicator">STEP 3 OF 3</div>
-        <h1>Choose your payment method to start your membership</h1>
-        <p>Your payment is encrypted and you can change how you pay anytime.</p>
-        <div id="cont-div">
-
-            <div id="container">
-                <div id="title">
-                    <h4>Select a <span style="color: #5b6d38">Payment</span> method</h4>
-                </div>
-
-                <form action="#">
-                    <input type="radio" name="payment" id="visa">
-                    <input type="radio" name="payment" id="mastercard">
-                    <input type="radio" name="payment" id="paypal">
-                    <input type="radio" name="payment" id="DANA">
-
-                    <div id="category">
-                        <label for="visa" id="visaMethod">
-                            <div class="imgName">
-                                <div class="imgContainer visa">
-                                    <img src="../images/payment-method/visa.png" alt="">
-                                </div>
-                                <span class="name">VISA</span>
-                            </div>
-                            <span class="check"><i class="fa-solid fa-circle-check" style="color: #2f431e;"></i></span>
-                        </label>
-
-                        <label for="mastercard" id="mastercardMethod">
-                            <div class="imgName">
-                                <div class="imgContainer mastercard">
-                                    <img src="../images/payment-method/mastercard.png" alt="">
-                                </div>
-                                <span class="name">Mastercard</span>
-                            </div>
-                            <span class="check"><i class="fa-solid fa-circle-check" style="color: #2f431e;"></i></span>
-                        </label>
-
-                        <label for="paypal" id="paypalMethod">
-                            <div class="imgName">
-                                <div class="imgContainer paypal">
-                                    <img src="../images/payment-method/paypal.png" alt="">
-                                </div>
-                                <span class="name">Paypal</span>
-                            </div>
-                            <span class="check"><i class="fa-solid fa-circle-check" style="color: #5b6d38;"></i></span>
-                        </label>
-
-                        <label for="DANA" id="danaMethod">
-                            <div class="imgName">
-                                <div class="imgContainer DANA">
-                                    <img src="../images/payment-method/dana.png" alt="">
-                                </div>
-                                <span class="name">DANA</span>
-                            </div>
-                            <span class="check"><i class="fa-solid fa-circle-check" style="color: #5b6d38;"></i></span>
-                        </label>
-                    </div>
-                </form>
+<div class="wrap">
+    <div id="step-indicator">STEP 3 OF 3</div>
+    <h1>Choose your payment method to start your membership</h1>
+    <p>Your payment is encrypted and you can change how you pay anytime.</p>
+    <div id="cont-div">
+        <div id="container">
+            <div id="title">
+                <h4>Select a <span style="color: #5b6d38">Payment</span> method</h4>
             </div>
-        </div>
 
-        <div id="submit-container">
-            <button id="submit-btn">Continue to Next Step</button>
+            <!-- Radio buttons remain unchanged for CSS compatibility -->
+            <form>
+                <input type="radio" name="payment" id="visa" ng-click="selectPaymentMethod('VISA')">
+                <input type="radio" name="payment" id="mastercard" ng-click="selectPaymentMethod('Mastercard')">
+                <input type="radio" name="payment" id="paypal" ng-click="selectPaymentMethod('Paypal')">
+                <input type="radio" name="payment" id="DANA" ng-click="selectPaymentMethod('DANA')">
+
+                <div id="category">
+                    <label for="visa" id="visaMethod">
+                        <div class="imgName">
+                            <div class="imgContainer visa">
+                                <img src="../images/payment-method/visa.png" alt="">
+                            </div>
+                            <span class="name">VISA</span>
+                        </div>
+                        <span class="check"><i class="fa-solid fa-circle-check" style="color: #2f431e;"></i></span>
+                    </label>
+
+                    <label for="mastercard" id="mastercardMethod">
+                        <div class="imgName">
+                            <div class="imgContainer mastercard">
+                                <img src="../images/payment-method/mastercard.png" alt="">
+                            </div>
+                            <span class="name">Mastercard</span>
+                        </div>
+                        <span class="check"><i class="fa-solid fa-circle-check" style="color: #2f431e;"></i></span>
+                    </label>
+
+                    <label for="paypal" id="paypalMethod">
+                        <div class="imgName">
+                            <div class="imgContainer paypal">
+                                <img src="../images/payment-method/paypal.png" alt="">
+                            </div>
+                            <span class="name">Paypal</span>
+                        </div>
+                        <span class="check"><i class="fa-solid fa-circle-check" style="color: #5b6d38;"></i></span>
+                    </label>
+
+                    <label for="DANA" id="danaMethod">
+                        <div class="imgName">
+                            <div class="imgContainer DANA">
+                                <img src="../images/payment-method/dana.png" alt="">
+                            </div>
+                            <span class="name">DANA</span>
+                        </div>
+                        <span class="check"><i class="fa-solid fa-circle-check" style="color: #5b6d38;"></i></span>
+                    </label>
+                </div>
+            </form>
         </div>
     </div>
 
-    <script src="../js/Blog.js"></script>
-    <script src="../js/Navbar.js?v=1" defer></script>
-    <script src="../js/Register_Step_3.js"></script>
-</body>
-</html>
+    <div id="submit-container">
+        <button id="submit-btn" ng-click="submitData()">Continue to Next Step</button>
+    </div>
+</div>
