Membuat Fitur Search, Filter, Sort, dan Pagination Video bagi tampilan member maupun admin. Menambahkan fitur CRUD bagi admin untuk pengelolaan video

--- a/ANGULAR/html/Login.html
+++ b/ANGULAR/html/Login.html
@@ -12,7 +12,7 @@
 
     <div id="container">
         <div id="form-container">
-            <form action="/html/Home_2.html">
+            <form action="/ANGULAR/html/Index_2.html">
                 <h1>LOGIN</h1>
                 <div class="infield">
                     <input type="text" name="email" required="required" id="email"/>
