--- a/ANGULAR/html/Index_2.html
+++ b/ANGULAR/html/Index_2.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="yogo">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List Event</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
     <link rel="stylesheet" href="../css/Navbar.css">
     <link rel="stylesheet" href="../css/Footer.css">
 </head>
+
 <body>
 
     <div id="nav">
         <div id="logo">
-            <a href="#/" class="nav-link" ng-class="{'active-nav': isActive('/')}">
+            <a href="#/home_2" class="nav-link" ng-class="{'active-nav': isActive('/home_2')}">
                 <h1>Yogo</h1>
             </a>
         </div>
         <nav id="navbar" ng-controller="NavBarController">
             <ul>
-                <li><a href="#/" class="nav-link" ng-class="{'active-nav': isActive('/')}">Home</a></li>
                 <li><a href="/ANGULAR/html/Recipes.html" class="nav-link">Recipes</a></li>
                 <li><a href="#/events" class="nav-link" ng-class="{'active-nav': isActive('/events')}">Events</a></li>
                 <li><a href="/ANGULAR/html/Blog.html" class="nav-link">Blog</a></li>
-                <li><a href="/ANGULAR/html/Login.html" class="nav-link subscribe">Login</a></li>
-                <li><a href="#/register" class="nav-link subscribe">Subscribe</a></li>
+                <li><a href="#/videos" class="nav-link subscribe">Videos</a></li>
+                <li><a href="#/list-video" class="nav-link subscribe">Admin Videos</a></li>
             </ul>
             <div id="hamburger">
                 <span class="bar"></span>
@@ -36,10 +37,10 @@
     </div>
 
     <div ng-view>
-        
+
     </div>
 
-    <footer ng-show="showFooter">
+    <footer>
         <h2>Yogo</h2>
         <nav>
             <a href="/html/Recipes.html">Recipes</a>
@@ -66,4 +67,5 @@
     <script src="../js/controllers/VideoController.js"></script>
     <script src="../js/services/VideoService.js"></script>
 </body>
+
 </html>
