Custom Title Template & Fix View Read

--- a/ANGULAR/html/Dashboard/dashboard.html
+++ b/ANGULAR/html/Dashboard/dashboard.html
@@ -10,11 +10,23 @@
     <script src="../../js/angular.min.js"></script>
     <script src="../../js/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-sanitize.min.js"></script>
+
     <script src="../../js/App.js"></script>
+
     <script src="../../js/controllers/NavBarController.js"></script>
     <script src="../../js/controllers/HomeController.js"></script>
+    <script src="../../js/controllers/HomeController_2.js"></script>
     <script src="../../js/controllers/EventsController.js"></script>
+    <script src="../../js/controllers/VideoController.js"></script>
+    <script src="../../js/controllers/RegisterController.js"></script>
+    <script src="../../js/controllers/RegisterStep1Controller.js"></script>
+    <script src="../../js/controllers/RegisterStep2Controller.js"></script>
+    <script src="../../js/controllers/RegisterStep3Controller.js"></script>
+
+
     <script src="../../js/services/EventsService.js"></script>
+    <script src="../../js/services/MembersService.js"></script>
+    <script src="../../js/services/VideoService.js"></script>
     
 </head>
 <body>
