--- a/ANGULAR/html/Dashboard/update-event.html
+++ b/ANGULAR/html/Dashboard/update-event.html
@@ -1,4 +1,4 @@
-    <div class="container mb-5 mt-3 border rounded" style="width:1000px">
+    <div class="container mb-5 mt-3 border rounded" style="width:1000px" ng-show="Data">
         <h2  class="text-center mt-1">Update Event</h2>
         <form ng-submit="updateEvent(eventId)">    
             <label class="form-label" for="title">Title</label><br>
