--- a/ANGULAR/html/Events_Detail.html
+++ b/ANGULAR/html/Events_Detail.html
@@ -1,4 +1,4 @@
-    <section id="hero">
+    <section id="hero" ng-show="Data">
         <div id="hero-content">
             <h1>{{ data.attributes.message }}</h1>
             <p>{{data.attributes.sub_message}}</p>
