--- a/ANGULAR/html/Index.html
+++ b/ANGULAR/html/Index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
     <link rel="stylesheet" href="../css/Navbar.css">
     <link rel="stylesheet" href="../css/Footer.css">
+    <style>
+        html, body {
+          display: none;
+        }
+    </style>
 </head>
 <body>
 
@@ -52,18 +57,22 @@
     <script src="../js/angular.min.js"></script>
     <script src="../js/angular-route.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-sanitize.min.js"></script>
+    
     <script src="../js/App.js"></script>
+
     <script src="../js/controllers/NavBarController.js"></script>
     <script src="../js/controllers/HomeController.js"></script>
+    <script src="../js/controllers/HomeController_2.js"></script>
     <script src="../js/controllers/EventsController.js"></script>
+    <script src="../js/controllers/VideoController.js"></script>
     <script src="../js/controllers/RegisterController.js"></script>
     <script src="../js/controllers/RegisterStep1Controller.js"></script>
     <script src="../js/controllers/RegisterStep2Controller.js"></script>
     <script src="../js/controllers/RegisterStep3Controller.js"></script>
+
+
     <script src="../js/services/EventsService.js"></script>
     <script src="../js/services/MembersService.js"></script>
-    <script src="../js/controllers/HomeController_2.js"></script>
-    <script src="../js/controllers/VideoController.js"></script>
     <script src="../js/services/VideoService.js"></script>
 </body>
 </html>
